feat(PXE-4): Change background to red (#6)
Co-authored-by: João Gonçalves <jandretgoncalves@gmail.com>

--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,7 @@
   font-size: calc(10px + 2vmin);
   color: white;
   visibility: visible;
-  background-color: #282c34;
+  background-color: red;
 }
 
 .app-link {
